--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev --webpack",
-    "build": "next build --webpack",
-    "static": "next build --webpack",
+    "build": "prisma generate && next build --webpack",
+    "static": "prisma generate && next build --webpack",
     "start": "next start",
     "lint": "eslint",
     "mobile:sync": "npx cap sync",
