feat: implement backend sync, database models, and dashboard enhancements

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@capacitor/core": "^6.2.1",
     "@capacitor/ios": "^6.2.1",
     "@prisma/client": "^5.22.0",
+    "canvas-confetti": "^1.9.4",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.11.11",
@@ -28,6 +29,7 @@
     "recharts": "^3.7.0"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
