--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.11.11",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^4.2.0",
     "lucide-react": "^0.460.0",
     "next": "16.1.6",
     "picocolors": "^1.1.1",
