Infrastructure: Real-world Push Notifications integrated with Capacitor and Firebase

--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@capacitor/cli": "^6.2.1",
     "@capacitor/core": "^6.2.1",
     "@capacitor/ios": "^6.2.1",
+    "@capacitor/push-notifications": "^6.0.0",
     "@prisma/client": "^5.22.0",
     "canvas-confetti": "^1.9.4",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "firebase-admin": "^13.6.1",
     "framer-motion": "^11.11.11",
     "html2canvas": "^1.4.1",
     "jspdf": "^4.2.0",
